exam-CKA/legacy-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: legacy-app
  namespace: k8s
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - "i=0; while true; do\n  echo \"$i: $(date)\" >> /var/log/legacy-app.log;\n  i=$((i+1));\n
      \ sleep 1;\ndone     \n"
    image: busybox
    imagePullPolicy: Always
    name: legacy-app
    volumeMounts:
    - name: varlog
      mountPath: /var/log
  - name: sidecar 
    image: busybox:1.28
    args: [/bin/sh, -c, 'tail -n+1 -f /var/log/legacy-app.log']
    volumeMounts:
    - name: varlog
      mountPath: /var/log
  volumes:
  - name: varlog
    emptyDir: {}
