exam-CKA/many_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kucc4
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
  - name: redis
    image: redis
  - name: memcached
    image: memcached
