exam-CKA/pod_nodeselect.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginux-kusc00401
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
  nodeSelector:
    disk: ssd
